# lab4

./: main.py  pyproject.toml
templates/: error_404.html  error_500.html  main.html
